deploy: fb727d90d6be80ca6fcb333141bd7a849344e4d3

--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@
 <a rel=noopener href=https://pixelfed.social/dsrev target=_blank title=Pixelfed><span class="fa fa-pixelfed fa-3x"></span></a>
 <a rel=noopener href=https://soundcloud.com/ilyaprokopenko target=_blank title=SoundCloud><span class="fa fa-soundcloud fa-3x"></span></a>
 <a rel=noopener href=https://github.com/dsrev target=_blank title=GitHub><span class="fa fa-github fa-3x"></span></a>
-<a rel=noopener href=https://codeberg.org/dsrev target=_blank title=Codeberg><span class="fa fa-codeberg fa-3x"></span></a></p><p><a rel=noopener href=https://github.com/dsrev/dsrev.me target=_blank>Source code</a> / <a href=/posts>Blog</a> / <a href=# class=toggle-dark-mode>Dark/light mode</a></p></div></div><script src=/assets/js/darkmode.js></script></body></html>
+<a rel=noopener href=https://codeberg.org/dsrev target=_blank title=Codeberg><span class="fa fa-codeberg fa-3x"></span></a>
+<a href=https://dsrev.me/contact title=More><span class="fa fa-angle-double-right fa-3x"></span></a></p><p><a rel=noopener href=https://github.com/dsrev/dsrev.me target=_blank>Source code</a> / <a href=/posts>Blog</a> / <a href=# class=toggle-dark-mode>Dark/light mode</a></p></div></div><script src=/assets/js/darkmode.js></script></body></html>
